@@ -52,7 +52,8 @@ libnm_util_la_SOURCES=			\
 
 libnm_util_la_LIBADD = $(GLIB_LIBS) $(DBUS_LIBS) $(UUID_LIBS)
 
-libnm_util_la_LDFLAGS = -Wl,--version-script=$(srcdir)/libnm-util.ver
+libnm_util_la_LDFLAGS = -Wl,--version-script=$(srcdir)/libnm-util.ver \
+	-version-info "1:0:0"
 
 if WITH_GNUTLS
 libnm_util_la_SOURCES += crypto_gnutls.c
